# comfyui-image-browser

./: .comfyignore  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  image_browser.py  justfile  package.json  pyproject.toml  release-please-config.json  thumb_cache.py  xmp_meta.py
.github/workflows/: ci.yml  publish.yml
docs/blueprint/adrs/: 0001-adopt-typescript-bun-build.md  0002-writes-sandboxed-to-well-known-roots.md
screenshots/: Dockerfile  Dockerfile.dockerignore  README.md  capture.mjs  entrypoint.sh  package.json  seed_images.py
src/: api.ts  browser.ts  index.ts  overlay.ts
tests/: conftest.py  test_helpers.py  test_thumb.py
tests/js/: index.test.js
